--- a/index.html
+++ b/index.html
@@ -1,72 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+    <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Julio Andrade-Jimenez</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link re="icon" type="image/x-icon" href="/photos/favicon_io/favicon.ico">
     <link rel="stylesheet" href="style.css">
-</head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  </head>
 <body>
-    <header class="header" id="nav-background">
-       <a href="#" class="logo">Julio Andrade-Jimenez</a> 
+    <header class="header">
+        <a href="#" class="logo">Julio Andrade-Jimenez</a>
 
         <nav class="navbar">
-            <a href="#about-me-heading">About Me</a>
-            <a href="#about-me-skills">Skills</a>
-            <a href="#about-me-projects">Projects</a>
-            <a href="#about-me-contact">Contact Me</a>
+            <a href="#">About Me</a>
+            <a href="#">Projects</a>
+            <a href="#">Contact</a>
         </nav>
     </header>
-
-<div id ="main-container">
-    <img id ="portrait" src="photos/R5C_7888.jpg" alt =" ">
-</div>
-    <p id="main-text">Hello there! My name is Julio, and I'm an inspiring web-developer student. 
-        Please feel free to scroll down to see my past experiences and projects.</p>
-<div class="container">
-    <div class="row">
-    <img id ="about-me-pic" src="photos/selfie.jpg" alt =" ">
-    <h1 id="about-me-heading">About Me</h1>
-    <p id="about-me-word">I am currently a senior student over at the University at 
-        Albany studying Informatics, with a concentration of Interactive User Experience (IUX). 
-    I have done numerous class projects that dealt with HTML, CSS, and Javascript. Additionally, I have past experience 
-in the IT field working as an IT technican.</p>
+    <div class="hero-container">
+    <div id="hero-text">
+        <h3 class="hero-header">Web developer student</h3>
+        <h2 id="hero-header-one">Hello! My name is Julio</h2>
+        <h4 id="hero-header-two">I'm interested in becoming a front-end developer.</h4>
+        <nav id="nav-icon">
+            <a href="https://www.linkedin.com/in/julio-andrade-jimenez-847bb917b/" target="'_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+            <a href="https://github.com/Wheetos" target="_blank"><i class="fa fa-github"></i></a>
+            <a href="./Resume_update.pdf" target="_blank">Resume</a>
+        </nav>
+    </div>
+    <div id="hero-img">
+    <img src="/photos/R5C_7888.jpg" alt="Julio's portrait" id="portrait">
     </div>
 </div>
-<div class="container">
-    <h1 id="about-me-skills">Skills</h1>
-    <p id ="skills-text">Below are some programming and markup languages that I have 
-        knowledge in.</p>
-        <div class="row">
-            <img class="skills-logo-temp" src="photos/Csharp-logo.png" alt =" ">
-            <img class="skills-logo-temp" src="photos/CSS-logo.png" alt =" ">
-            <img class="skills-logo-temp" src="photos/html-logo.png" alt =" ">
-            <img class="skills-logo-temp" src="photos/JS-logo.png" alt =" ">
-        </div>
-</div>
-<div class="container">
-    <h1 id="about-me-projects">Projects</h1>
-        <div class="row">
-            <p id="skills-text">This section is empty as I have no projects to showcase yet. Please check back at a later
-                date.</p>
-        </div>
-</div>
-<div class="container">
-    <h1 id="about-me-contact">Contact Me</h1>
-    <div class="mail-container">
-        <form action="https://formspree.io/f/xzzppgro" method="POST">
-          <label for="fname">First Name</label>
-          <input type="text" id="fname" name="first-name" placeholder="Your name..">   
-          <label for="lname">Last Name</label>
-          <input type="text" id="lname" name="last-name" placeholder="Your last name..">   
-          <label for="email">Email</label>
-          <input type="text" id="email" name="email" placeholder="Enter your email..">
-          <label for="subject">Message</label>
-          <textarea id="subject" name="message" placeholder="Write something.." style="height:200px"></textarea>
-      
-          <input type="submit" value="Submit">
-        </form>
-      </div>
-</div>
 </body>
-</html> 
+</html>
