--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Julio Andrade-Jimenez</title>
-    <link re="icon" type="image/x-icon" href="/photos/favicon_io/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/photos/favicon_io/favicon.ico">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
