Added a "About Me" section, among other changes

--- a/index.html
+++ b/index.html
@@ -18,11 +18,10 @@
 <body>
     <header class="header">
         <a href="#" class="logo">Julio Andrade-Jimenez</a>
-
         <nav class="navbar">
-            <a href="#">About Me</a>
-            <a href="#">Projects</a>
-            <a href="#">Contact</a>
+            <a href="#about-me-header">About Me</a>
+            <a href="#skills-header">Skills</a>
+            <a href="#projects-header">Projects</a>
         </nav>
     </header>
     <div class="hero-container">
@@ -33,12 +32,42 @@
         <nav id="nav-icon">
             <a href="https://www.linkedin.com/in/julio-andrade-jimenez-847bb917b/" target="'_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
             <a href="https://github.com/Wheetos" target="_blank"><i class="fa fa-github"></i></a>
-            <a href="./Resume_update.pdf" target="_blank">Resume</a>
+            <a href="./Resume.pdf" target="_blank">Resume</a>
         </nav>
     </div>
     <div id="hero-img">
     <img src="/photos/R5C_7888.jpg" alt="Julio's portrait" id="portrait">
     </div>
+</div>
+<div class="wrapper">
+    <h1 id="about-me-header">About Me</h1>
+    <div class="about-wrapper">
+        <img src="/photos/selfie.jpg" alt=" " id="about-me-pic">
+        <p>  When I first started college at Dutchess Community College, I knew that 
+             I wanted to major in a computer related field, but I 
+             didn't know exactly which one. After a troubling two years, I 
+             changed majors from computer science to computer 
+             information systems. I took a couple of HTML and CSS 
+             classes and I enjoyed designing and creating 
+             websites. I then transferred over to the University at 
+             Albany where I am currently a senior studying informatics 
+             with a concentration in interactive user experience. In 
+             addition to my skills in web development, I also have 
+             prior experience in the IT field and as a resident assistant.
+        </p>
+    </div>
+</div>
+<div class="wrapper">
+    <h1 id="skills-header">Skills</h1>
+        <div class="skills-wrapper">
+            <p>Below are mark-up languages that I know of:</p>
+        </div>
+</div>
+<div class="wrapper">
+    <h1 id="projects-header">Projects</h1>
+        <div class="project-wrapper">
+            <p>I'm currently working on projects. Please check back later.</p>
+        </div>
 </div>
 </body>
 </html>
