Added images for the skills section and added the footer section

--- a/index.html
+++ b/index.html
@@ -61,6 +61,12 @@
     <h1 id="skills-header">Skills</h1>
         <div class="skills-wrapper">
             <p>Below are mark-up languages that I know of:</p>
+            <img src="/photos/html-logo.png" alt=" " class="skills-img">
+            <img src="/photos/CSS-logo.png" alt=" " class="skills-img">
+            <img src="/photos/JS-logo.png" alt=" " class="skills-img">
+            <img src="/photos/Csharp-logo.png" alt=" " class="skills-img">
+            <img src="/photos/JS-logo.jpg" alt=" " class="skills-img">
+            <img src="/photos/react-logo.png" alt=" " class="skills-img">
         </div>
 </div>
 <div class="wrapper">
@@ -69,5 +75,20 @@
             <p>I'm currently working on projects. Please check back later.</p>
         </div>
 </div>
+<footer>
+    <div class="footer">
+    <p>
+        &copy; 2024 Julio Andrade-Jimenez
+    </p>
+    <p>
+        Connect with me
+    </p>
+    <nav id="footer-icon">
+        <a href="https://www.linkedin.com/in/julio-andrade-jimenez-847bb917b/" target="'_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+        <a href="https://github.com/Wheetos" target="_blank"><i class="fa fa-github"></i></a>
+        <a href="mailto:julioandrade20943@gmail.com">Email me</a>
+    </nav>
+    </div>
+</footer>
 </body>
 </html>
