--- a/index.html
+++ b/index.html
@@ -1,104 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Julio Andrade-Jimenez</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="/photos/favicon_io/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/photos/favicon_io/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/photos/favicon_io/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/hamburgers.css" rel="stylesheet">
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/photos/favicon_io/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/photos/favicon_io/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/photos/favicon_io/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="stylesheet" href="/styles/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="/styles/hamburgers.css" rel="stylesheet" />
     <script src="/java.js"></script>
-</head>
-<body>
+  </head>
+  <body>
     <header class="header">
-        <div class="logo-container">
-            <a href="#" class="logo">Julio Andrade-Jimenez</a>
-                            <!-- Hamburger Menu -->
-                    <button class="hamburger hamburger--slider" id="button-begone" type="button" onclick="Hamburger()">
-                        <span class="hamburger-box">
-                          <span class="hamburger-inner"></span>
-                        </span>
-                      </button>
-        </div>   
-        <nav class="navbar">         
-            <a href="#about-me-header">About Me</a>
-            <a href="#skills-header">Skills</a>
-            <a href="#projects-header">Projects</a>
-        </nav>
+      <div class="logo-container">
+        <a href="#" class="logo">Julio Andrade-Jimenez</a>
+        <!-- Hamburger Menu -->
+        <button
+          class="hamburger hamburger--slider"
+          id="button-begone"
+          type="button"
+          onclick="Hamburger()"
+        >
+          <span class="hamburger-box">
+            <span class="hamburger-inner"></span>
+          </span>
+        </button>
+      </div>
+      <nav class="navbar">
+        <a href="#about-me-header">About Me</a>
+        <a href="#skills-header">Skills</a>
+        <a href="#projects-header">Projects</a>
+      </nav>
     </header>
     <div class="hero-container">
-    <div id="hero-text">
+      <div id="hero-text">
         <h3 class="hero-header">Web developer student</h3>
         <h2 id="hero-header-one">Hello! My name is Julio</h2>
-        <h4 id="hero-header-two">I'm interested in becoming a front-end developer.</h4>
+        <h4 id="hero-header-two">
+          I'm interested in becoming a front-end developer.
+        </h4>
         <nav id="nav-icon">
-            <a href="https://www.linkedin.com/in/julio-andrade-jimenez-847bb917b/" target="'_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-            <a href="https://github.com/Wheetos" target="_blank"><i class="fa fa-github"></i></a>
-            <a href="./Resume.pdf" target="_blank">Resume</a>
+          <a
+            href="https://www.linkedin.com/in/julio-andrade-jimenez-847bb917b/"
+            target="'_blank"
+            ><i class="fa fa-linkedin" aria-hidden="true"></i
+          ></a>
+          <a href="https://github.com/Wheetos" target="_blank"
+            ><i class="fa fa-github"></i
+          ></a>
+          <a href="./assets/Resume.pdf" target="_blank">Resume</a>
         </nav>
+      </div>
+      <div id="hero-img">
+        <img src="/assets/R5C_7888.jpg" alt="Julio's portrait" id="portrait" />
+      </div>
     </div>
-    <div id="hero-img">
-    <img src="/photos/R5C_7888.jpg" alt="Julio's portrait" id="portrait">
-    </div>
-</div>
-<div class="wrapper">
-    <h1 id="about-me-header">About Me</h1>
-    <div class="about-wrapper">
-        <img src="/photos/selfie.jpg" alt=" " id="about-me-pic">
-        <p>  When I first started college at Dutchess Community College, I knew that 
-             I wanted to major in a computer related field, but I 
-             didn't know exactly which one. After a troubling two years, I 
-             changed majors from computer science to computer 
-             information systems. I took a couple of HTML and CSS 
-             classes and I enjoyed designing and creating 
-             websites. I then transferred over to the University at 
-             Albany where I am currently a senior studying informatics 
-             with a concentration in interactive user experience. In 
-             addition to my skills in web development, I also have 
-             prior experience in the IT field and as a resident assistant.
+    <div class="wrapper">
+      <h1 id="about-me-header">About Me</h1>
+      <div class="about-wrapper">
+        <img src="/assets/selfie.jpg" alt=" " id="about-me-pic" />
+        <p>
+          When I first started college at Dutchess Community College, I knew
+          that I wanted to major in a computer related field, but I didn't know
+          exactly which one. After a troubling two years, I changed majors from
+          computer science to computer information systems. I took a couple of
+          HTML and CSS classes and I enjoyed designing and creating websites. I
+          then transferred over to the University at Albany where I am currently
+          a senior studying informatics with a concentration in interactive user
+          experience. In addition to my skills in web development, I also have
+          prior experience in the IT field and as a resident assistant.
         </p>
+      </div>
     </div>
-</div>
-<div class="wrapper">
-    <h1 id="skills-header">Skills</h1>
-        <div class="skills-wrapper">
-            <p>Below are mark-up languages that I know of:</p>
-            <img src="/photos/html-logo.png" alt=" " class="skills-img">
-            <img src="/photos/CSS-logo.png" alt=" " class="skills-img">
-            <img src="/photos/JS-logo.png" alt=" " class="skills-img">
-            <img src="/photos/Csharp-logo.png" alt=" " class="skills-img">
-            <img src="/photos/react-logo.png" alt=" " class="skills-img">
-        </div>
-</div>
-<div class="wrapper">
-    <h1 id="projects-header">Projects</h1>
-        <div class="project-wrapper">
-            <p>I'm currently working on projects. Please check back later.</p>
-        </div>
-</div>
-<footer>
-    <div class="footer">
-    <p>
-        &copy; 2024 Julio Andrade-Jimenez
-    </p>
-    <p>
-        Connect with me
-    </p>
-    <nav id="footer-icon">
-        <a href="https://www.linkedin.com/in/julio-andrade-jimenez-847bb917b/" target="'_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-        <a href="https://github.com/Wheetos" target="_blank"><i class="fa fa-github"></i></a>
-        <a href="mailto:julioandrade20943@gmail.com">Email</a>
-    </nav>
+    <div class="wrapper">
+      <h1 id="skills-header">Skills</h1>
+      <div class="skills-wrapper">
+        <p>Below are mark-up languages that I know of:</p>
+        <img src="/photos/html-logo.png" alt=" " class="skills-img" />
+        <img src="/photos/CSS-logo.png" alt=" " class="skills-img" />
+        <img src="/photos/JS-logo.png" alt=" " class="skills-img" />
+        <img src="/photos/Csharp-logo.png" alt=" " class="skills-img" />
+        <img src="/photos/react-logo.png" alt=" " class="skills-img" />
+      </div>
     </div>
-</footer>
-</body>
+    <div class="wrapper">
+      <h1 id="projects-header">Projects</h1>
+      <div class="project-wrapper">
+        <p>I'm currently working on projects. Please check back later.</p>
+      </div>
+    </div>
+    <footer>
+      <div class="footer">
+        <p>&copy; 2024 Julio Andrade-Jimenez</p>
+        <p>Connect with me</p>
+        <nav id="footer-icon">
+          <a
+            href="https://www.linkedin.com/in/julio-andrade-jimenez-847bb917b/"
+            target="'_blank"
+            ><i class="fa fa-linkedin" aria-hidden="true"></i
+          ></a>
+          <a href="https://github.com/Wheetos" target="_blank"
+            ><i class="fa fa-github"></i
+          ></a>
+          <a href="mailto:julioandrade20943@gmail.com">Email</a>
+        </nav>
+      </div>
+    </footer>
+  </body>
 </html>
