--- a/index.html
+++ b/index.html
@@ -39,18 +39,27 @@
   </head>
   <body>
     <header class="header">
-      <div class="logo-container">
+      <div class="header-container">
         <a href="#" class="logo">Julio Andrade-Jimenez</a>
         <!-- Hamburger Menu -->
-        <button
-          class="hamburger hamburger--collapse"
-          type="button"
-          id="button-begone"
-        >
-          <span class="hamburger-box">
-            <span class="hamburger-inner"></span>
-          </span>
-        </button>
+        <div class="button-container">
+          <button
+            class="hamburger hamburger--collapse"
+            type="button"
+            id="button-begone"
+          >
+            <span class="hamburger-box">
+              <span class="hamburger-inner"></span>
+            </span>
+          </button>
+        </div>
+      </div>
+      <div class="sidebar">
+        <nav class="sidebar-mobile">
+          <a href="#about-me-header">About Me</a>
+          <a href="#skills-header">Skills</a>
+          <a href="#projects-header">Projects</a>
+        </nav>
       </div>
       <nav class="navbar">
         <a href="#about-me-header">About Me</a>
@@ -60,7 +69,7 @@
     </header>
     <div class="flexbox">
       <div class="hero-container">
-        <div>
+        <div id="hero-text">
           <h3 class="hero-header">Web developer student</h3>
           <h2 id="hero-header-one">Hello! My name is Julio</h2>
           <h4 id="hero-header-two">
@@ -78,13 +87,7 @@
             <a href="./assets/Resume.pdf" target="_blank">Resume</a>
           </nav>
         </div>
-        <div>
-          <img
-            src="/assets/R5C_7888.jpg"
-            alt="Julio's portrait"
-            id="portrait"
-          />
-        </div>
+        <img src="/assets/R5C_7888.jpg" alt="Julio's portrait" id="portrait" />
       </div>
       <div class="wrapper">
         <div class="about-wrapper" id="about-me-header">
@@ -145,10 +148,10 @@
     </footer>
     <script>
       var hamburger = document.querySelector(".hamburger");
-      var navbar = document.querySelector(".navbar");
+      var navbar = document.querySelector(".sidebar");
       hamburger.addEventListener("click", function () {
         hamburger.classList.toggle("is-active");
-        navbar.classList.toggle("navbar-active");
+        navbar.classList.toggle("sidebar-active");
       });
     </script>
   </body>
