--- a/index.html
+++ b/index.html
@@ -60,6 +60,21 @@
           <a href="#skills-header">Skills</a>
           <a href="#projects-header">Projects</a>
         </nav>
+        <div class="footer">
+          <p>&copy; 2024 Julio Andrade-Jimenez</p>
+          <p>Connect with me</p>
+          <nav id="footer-icon">
+            <a
+              href="https://www.linkedin.com/in/julio-andrade-jimenez-847bb917b/"
+              target="'_blank"
+              ><i class="fa fa-linkedin" aria-hidden="true"></i
+            ></a>
+            <a href="https://github.com/Wheetos" target="_blank"
+              ><i class="fa fa-github"></i
+            ></a>
+            <a href="mailto:julioandrade20943@gmail.com">Email</a>
+          </nav>
+        </div>
       </div>
       <nav class="navbar">
         <a href="#about-me-header">About Me</a>
@@ -148,10 +163,29 @@
     </footer>
     <script>
       var hamburger = document.querySelector(".hamburger");
-      var navbar = document.querySelector(".sidebar");
+      var mobile = document.querySelector(".sidebar-mobile");
       hamburger.addEventListener("click", function () {
-        hamburger.classList.toggle("is-active");
-        navbar.classList.toggle("sidebar-active");
+        const sidebar = document.querySelector(".sidebar");
+        const active = document.querySelector(".sidebar-active");
+        const hidden = document.querySelector(".sidebar-hidden");
+
+        if (sidebar) {
+          sidebar.classList.toggle("sidebar-active");
+          sidebar.classList.remove("sidebar");
+        } else if (hidden) {
+          hidden.classList.remove("sidebar-hidden");
+          hidden.classList.toggle("sidebar-active");
+        } else {
+          active.classList.remove("sidebar-active");
+          active.classList.toggle("sidebar-hidden");
+        }
+      });
+      mobile.addEventListener("click", function () {
+        const active = document.querySelector(".sidebar-active");
+        if (mobile) {
+          active.classList.remove("sidebar-active");
+          active.classList.toggle("sidebar-hidden");
+        }
       });
     </script>
   </body>
