Replaced some wording in the project section

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
       <div class="wrapper">
         <div class="project-wrapper" id="projects-header">
           <h1>Projects</h1>
-          <p>I'm currently working on projects. Please check back later.</p>
+          <p>I don't have any completed projects to showcase but you can check out my Github to see ones in progress.</p>
         </div>
       </div>
     </div>
