Fixed the sidebar on mobile & included updated resume

--- a/index.html
+++ b/index.html
@@ -60,21 +60,6 @@
           <a href="#skills-header">Skills</a>
           <a href="#projects-header">Projects</a>
         </nav>
-        <div class="footer">
-          <p>&copy; 2024 Julio Andrade-Jimenez</p>
-          <p>Connect with me</p>
-          <nav id="footer-icon">
-            <a
-              href="https://www.linkedin.com/in/julio-andrade-jimenez-847bb917b/"
-              target="'_blank"
-              ><i class="fa fa-linkedin" aria-hidden="true"></i
-            ></a>
-            <a href="https://github.com/Wheetos" target="_blank"
-              ><i class="fa fa-github"></i
-            ></a>
-            <a href="mailto:julioandrade20943@gmail.com">Email</a>
-          </nav>
-        </div>
       </div>
       <nav class="navbar">
         <a href="#about-me-header">About Me</a>
@@ -99,7 +84,7 @@
             <a href="https://github.com/Wheetos" target="_blank"
               ><i class="fa fa-github"></i
             ></a>
-            <a href="./assets/Resume.pdf" target="_blank">Resume</a>
+            <a href="./assets/Julio-Andrade-Jimenez-Resume.pdf" target="_blank">Resume</a>
           </nav>
         </div>
         <img src="/assets/R5C_7888.jpg" alt="Julio's portrait" id="portrait" />
